# GestureBasedComputerControlSystem

./: .gitignore  README.md  build_windows.ps1  gbccs.spec  gesture_custom_rules.json  gesture_macros.json  main.py  only_fingers_extended.json  paths.py  pyproject.toml  requirements.txt  test_macro.json  validate_keyboard.py
backend/: Action.py  GestureConfig.py  HandTracker.py  HandsData.py  LandmarkSmoother.py  Strategizer.py  __init__.py  camera_devices.py  macos_camera_permissions.py
backend/custom_rules/: ConditionEvaluator.py  MacroChainRecognizer.py  RuleCompiler.py  RuleGestures.py  RuleLoader.py  __init__.py  condition_catalog.py
frontend/: README.md  main_window.py  production_keyboard_window.py  video_widget.py
icons/: gbccs_icon.icns
logs/: dev_boot.out  dev_boot_latest.err  dev_boot_venv.err  dev_click_scroll_fix.err  dev_merge_check.err  dev_mouse_runtime_fix.err  dev_mouse_runtime_verify.err  dev_ui_modernization.err  dialog_windowing_dev_check.err  keyboard_exit_dev.err  keyboard_exit_prod.err  prod_boot.err  prod_boot.out  prod_boot_latest.err  prod_boot_venv.err  prod_click_scroll_fix.err  prod_merge_check.err  prod_mouse_runtime_fix.err  prod_mouse_runtime_verify.err  prod_ui_modernization.err  startup_default_dev.err  startup_legacy_dev.err  tutorial_dev_startup.err  tutorial_keyboard_dev.err  tutorial_keyboard_prod.err  tutorial_prod_startup.err
tests/: __init__.py  test_airtyping_swipe_state.py  test_mode_switch_right_hand.py  test_swipe_decoder.py
tools/: replay_video_typing_tuner.py
videos/: hello_world_tuned_overrides.json
(+135 files in other folders)
