[project]
name = "project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "absl-py>=2.3.1",
    "attrs>=25.4.0",
    "autopy>=4.0.1",
    "cffi>=2.0.0",
    "contourpy>=1.3.3",
    "cycler>=0.12.1",
    "flatbuffers>=25.9.23",
    "fonttools>=4.60.1",
    "jax>=0.8.0",
    "jaxlib>=0.8.0",
    "kiwisolver>=1.4.9",
    "matplotlib>=3.10.7",
    "mediapipe>=0.10.14",
    "ml-dtypes>=0.5.3",
    "numpy>=2.3.4",
    "opencv-contrib-python>=4.11.0.86",
    "opt-einsum>=3.4.0",
    "packaging>=25.0",
    "pillow>=12.0.0",
    "protobuf>=4.25.8",
    "pyautogui>=0.9.54",
    "pycparser>=2.23",
    "PySide6>=6.9.0",
    "pyparsing>=3.2.5",
    "python-dateutil>=2.9.0.post0",
    "scipy>=1.16.3",
    "sentencepiece>=0.2.1",
    "six>=1.17.0",
    "sounddevice>=0.5.3",
    "pynput>=1.8.1",
]
